--- a/style.sass
+++ b/style.sass
@@ -21,3 +21,11 @@
   animation: blinkit 1s infinite
   min-width: 15px
 
+.cv
+  width: 100%
+  height: 10px
+  border-radius: 2px
+  box-shadow: 0 0 0 1px #666
+
+.is-timer
+  width: 50px
